--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.thymeleaf.cache=false
 limit=4
-Spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
-Spring.datasource.username=evgenia.udalova
-Spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
+spring.datasource.username=evgenia.udalova
+spring.datasource.password=
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
